Removed the margin-top: 70px from the main css styling as I had managed to create a bug where I had unwanted white space on my website

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,6 @@ ul {
     Love Running project by Code Institute */
 main {
     flex: 1 0 auto;
-    margin-top: 70px;
     position: absolute;
 }
 
@@ -168,10 +167,10 @@ input[type=email] {
         z-index: 10;
         display: flex;
         justify-content: space-between;
-        align-items: center;
         letter-spacing: 2px;
-        padding-right: 20px;
-        padding-left: 20px;
+        padding-right: 10px;
+        padding-left: 10px;
+        padding-bottom: 5px;
     }
 
    /* Re-sizing of nav bar items to look neater */ 
@@ -212,7 +211,7 @@ input[type=email] {
     #egypt-intro {
         padding: 70px 20px 10px;
         width:100%;
-        height: 600px;
+        height: 1100px;
         background-color: rgba(203, 150, 93, 0.8);
     }
     
